lab1 phan2 bai3

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -15,8 +15,8 @@
 		<li><a href="phan2_bai1/">Phan 2 Bai 1</a></li>
 		<li><a href="phan2_bai2/bai2.html">Phan 2 Bai 2</a></li>
 		<li><a href="phan2_bai3/bai3.html">Phan 2 Bai 3</a></li>
-		<li><a href="phan2_bai4/">Phan 2 Bai 4</a></li>
-		<li><a href="phan2_bai5/">Phan 2 Bai 5</a></li>
+		<li><a href="phan2_bai4/bai4.html">Phan 2 Bai 4</a></li>
+		<li><a href="phan2_bai5/bai5.html">Phan 2 Bai 5</a></li>
 	</ul>
 </body>
 
