lab1 phan2 bai2

--- a/lab1/phan2_bai2/bai2.html
+++ b/lab1/phan2_bai2/bai2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img src="logo.gif">
+  <img src="logo.gif" class="round" width="300px">
   <section>
     <h1 class="shadow">About</h1>
     <p>It can be intimidating for women to learn and ask questions when they are in an <span class="abc">extreme
@@ -24,16 +24,16 @@
     <ul>
       <li>USA
         <ul>
-          <li><a href="">New York</a></li>
-          <li><a href="">Columbus</a></li>
-          <li><a href="">Austin</a></li>
-          <li><a href="">Philly</a></li>
+          <li><a href="http://meetup.com/Lab" class="red">New York</a></li>
+          <li><a href="https://www.meetup.com/Lab%20cbus/" class="blue">Columbus</a></li>
+          <li><a href="https://www.meetup.com/Girl-Develop-It-Austin/" class="red">Austin</a></li>
+          <li><a href="https://www.meetup.com/Girl-Develop-It-Philadelphia/" class="blue">Philly</a></li>
         </ul>
       </li>
       <li>World
         <ul>
-          <li><a href="">Ottawa</a></li>
-          <li><a href="">Sydney</a></li>
+          <li><a href="https://www.meetup.com/Girl-Develop-It-Ottawa/" class="blue">Ottawa</a></li>
+          <li><a href="https://www.meetup.com/Lab%20-sydney/" class="red">Sydney</a></li>
         </ul>
       </li>
     </ul>
@@ -64,11 +64,11 @@
       </tr>
     </table>
   </section>
-  <div>
+  <nav>
     <span><a href="https://twitter.com/girldevelopit" class="shadow">Twitter</a> |</span>
     <span><a href="https://www.facebook.com/girldevelopit">Facebook</a> |</span>
     <span><a href="https://www.flickr.com/photos/40453677@N00/sets/72157626841092971/">Flickr</a></span>
-  </div>
+  </nav>
 </body>
 
 </html>
