lab1 phan2 bai3

--- a/lab1/phan2_bai3/bai3.html
+++ b/lab1/phan2_bai3/bai3.html
@@ -24,35 +24,39 @@
 	<main>
 		<div class="container">
 			<div class="columns column-1">
-				<h2>Column 1</h2>
-				<p><a href="">456 Berea Street Home</a></p>
-				<p><a href="">2 column CSS layout</a></p>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris vel magna. Mauris risus nunc, tristique
-					varius, gravida in, lacinia vel, elit. Nam ornare, felis non faucibus molestie, nulla augue adipiscing
-					mauris, a nonummy diam ligula ut risus. Praesent varius. Cum sociis natoque penatibus et magnis dis
-					parturient montes, nascetur ridiculus mus.</p>
-				<p>Nulla a lacus. Nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce pulvinar
-					lobortis purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
-					semper ipsum et urna. Ut consequat neque vitae felis. Suspendisse dapibus, magna quis pulvinar laoreet,
-					dolor neque lacinia arcu, et luctus mi erat vestibulum sem. Mauris faucibus iaculis lacus. Aliquam nec ante
-					in quam sollicitudin congue. Quisque congue egestas elit. Quisque viverra. Donec feugiat elementum est.
-					Etiam vel lorem.
-				</p>
+				<div class="content">
+					<h2>Column 1</h2>
+					<p><a href="">456 Berea Street Home</a></p>
+					<p><a href="">2 column CSS layout</a></p>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris vel magna. Mauris risus nunc, tristique
+						varius, gravida in, lacinia vel, elit. Nam ornare, felis non faucibus molestie, nulla augue adipiscing
+						mauris, a nonummy diam ligula ut risus. Praesent varius. Cum sociis natoque penatibus et magnis dis
+						parturient montes, nascetur ridiculus mus.</p>
+					<p>Nulla a lacus. Nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce pulvinar
+						lobortis purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec
+						semper ipsum et urna. Ut consequat neque vitae felis. Suspendisse dapibus, magna quis pulvinar laoreet,
+						dolor neque lacinia arcu, et luctus mi erat vestibulum sem. Mauris faucibus iaculis lacus. Aliquam nec ante
+						in quam sollicitudin congue. Quisque congue egestas elit. Quisque viverra. Donec feugiat elementum est.
+						Etiam vel lorem.
+					</p>
+				</div>
 			</div>
 			<div class="columns column-2">
-				<h2>Column 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris vel magna.</p>
-				<ul>
-					<li><a href="">Link 1</a></li>
-					<li><a href="">Link 2</a></li>
-					<li><a href="">Link 3</a></li>
-					<li><a href="">Link 4</a></li>
-					<li><a href="">Link 5</a></li>
-					<li><a href="">Link 6</a></li>
-					<li><a href="">Link 7</a></li>
-					<li><a href="">Link 8</a></li>
-					<li><a href="">Link 9</a></li>
-				</ul>
+				<div class="content">
+					<h2>Column 2</h2>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris vel magna.</p>
+					<ul>
+						<li><a href="">Link 1</a></li>
+						<li><a href="">Link 2</a></li>
+						<li><a href="">Link 3</a></li>
+						<li><a href="">Link 4</a></li>
+						<li><a href="">Link 5</a></li>
+						<li><a href="">Link 6</a></li>
+						<li><a href="">Link 7</a></li>
+						<li><a href="">Link 8</a></li>
+						<li><a href="">Link 9</a></li>
+					</ul>
+				</div>
 			</div>
 
 		</div>
