--- a/lab1/phan2_bai5/bai5.html
+++ b/lab1/phan2_bai5/bai5.html
@@ -10,52 +10,54 @@
 
 <body>
   <div class="all-container">
-    <header>
-      <img src="images/bg-header.jpg" alt="header image" class="bg-header" width="700px">
-      <h1 class="title">Site Title</h1>
-    </header>
-    <div class="menu">
-      <img src="images/bg-menu.png" alt="menu">
-      <nav>
-        <span><a href="">Link One</a></span>
-        <span><a href="">Link Two</a></span>
-        <span><a href="">Link Three</a></span>
-        <span><a href="">Link Four</a></span>
-        <span><a href="">Link Five</a></span>
-      </nav>
-    </div>
-    <div class="container">
-      <div class="column-1">
-        <img src="images/bg-ad-top.png" alt="ad-top" width="480px">
-        <div class="content">
-          <h2>Lorem Ipsum</h2>
-          <p class="date">Posted on 30 November 2006</p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-            laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
-            ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-          <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
-            eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-          <img src="images/icon-comment.png" alt="comment icon">
-          <span class="comment">3 comments</span>
-        </div>
+    <div>
+      <header>
+        <img src="images/bg-header.jpg" alt="header image" class="bg-header" width="700">
+        <h1 class="title">Site Title</h1>
+      </header>
+      <div class="menu">
+        <img src="images/bg-menu.png" alt="menu">
+        <nav>
+          <span><a href="">Link One</a></span>
+          <span><a href="">Link Two</a></span>
+          <span><a href="">Link Three</a></span>
+          <span><a href="">Link Four</a></span>
+          <span><a href="">Link Five</a></span>
+        </nav>
       </div>
-      <div class="column-2">
-        <div style="background-color: rgb(239, 239, 239);">
-          <div class="feed-head">
-            <!-- <img src="images/bg-feed.gif" alt="feed"> -->
-            <img src="images/button-feed-1.png" alt="button feed">
+      <div class="container">
+        <div class="column-1">
+          <img src="images/bg-ad-top.png" alt="ad-top" width="480">
+          <div class="content">
+            <h2>Lorem Ipsum</h2>
+            <p class="date">Posted on 30 November 2006</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+              laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation
+              ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+            <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
+              eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+              zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            <img src="images/icon-comment.png" alt="comment icon">
+            <span class="comment">3 comments</span>
           </div>
-          <nav>
-            <p><a href="">Link One</a></p>
-            <p><a href="">Link Two</a></p>
-            <p><a href="">Link Three</a></p>
-            <p><a href="">Link Four</a></p>
-            <p><a href="">Link Five</a></p>
-          </nav>
         </div>
-        <div style="display: block;">
-          <img src="images/bg-sidebar-bottom.gif" alt="sidebar-bottom">
+        <div class="column-2">
+          <div style="background-color: rgb(239, 239, 239);">
+            <div class="feed-head">
+              <!-- <img src="images/bg-feed.gif" alt="feed"> -->
+              <img src="images/button-feed-1.png" alt="button feed">
+            </div>
+            <nav>
+              <p><a href="">Link One</a></p>
+              <p><a href="">Link Two</a></p>
+              <p><a href="">Link Three</a></p>
+              <p><a href="">Link Four</a></p>
+              <p><a href="">Link Five</a></p>
+            </nav>
+          </div>
+          <div style="display: block;">
+            <img src="images/bg-sidebar-bottom.gif" alt="sidebar-bottom">
+          </div>
         </div>
       </div>
     </div>
