--- a/lab1/phan2_bai5/bai5.html
+++ b/lab1/phan2_bai5/bai5.html
@@ -37,14 +37,12 @@
             <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore
               eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
               zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-            <img src="images/icon-comment.png" alt="comment icon">
-            <span class="comment">3 comments</span>
+            <p class="comment"><img src="images/icon-comment.png" alt="comment icon" style="vertical-align: sub;"> 3 comments</p>
           </div>
         </div>
         <div class="column-2">
           <div style="background-color: rgb(239, 239, 239);">
             <div class="feed-head">
-              <!-- <img src="images/bg-feed.gif" alt="feed"> -->
               <img src="images/button-feed-1.png" alt="button feed">
             </div>
             <nav>
