--- a/lab2/phan2_bai2/index.html
+++ b/lab2/phan2_bai2/index.html
@@ -39,27 +39,27 @@
               </div>
               <div class="form-group text-center">
                 <div class="container-fluid">
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="swapValueById('numberA','numberB')">A &lt;-&gt; B</button>
                   </div>
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="addNumberById('numberA','numberB','result')">A + B</button>
                   </div>
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="subNumberById('numberA','numberB','result')">A - B</button>
                   </div>
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="multipleNumberById('numberA','numberB','result')">A * B</button>
                   </div>
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="divideNumberById('numberA','numberB','result')">A / B</button>
                   </div>
-                  <div class="row justify-content-center">
+                  <div class="row justify-content-center margin-top-10">
                     <button type="button" class="col-6 col-md-4 col-lg-3 btn btn-primary"
                       onclick="factorialById('numberA','result')">A!</button>
                   </div>
@@ -70,12 +70,16 @@
           <div class="col-6 bg-light">
             <div class="text-center">
               <h2>Result</h2>
-              <output class="form-control" name="result" id="result">0</output>
-              <div class="row justify-content-center">
-                <button type="button" class="col-3 btn btn-primary" onclick="moveById('result','numberA')">To A</button>
-                <button type="button" class="col-3 btn btn-primary"
-                  onclick="saveValue('result','history')">Save</button>
-                <button type="button" class="col-3 btn btn-primary" onclick="moveById('result','numberB')">To B</button>
+              <div class="margin-top-10">
+                <output class="form-control" name="result" id="result">0</output>
+                <div class="row justify-content-evenly margin-top-10">
+                  <button type="button" class="col-3 btn btn-primary"
+                    onclick="moveById('result','numberA')">To A</button>
+                  <button type="button" class="col-3 btn btn-primary"
+                    onclick="saveValue('result','history')">Save</button>
+                  <button type="button" class="col-3 btn btn-primary"
+                    onclick="moveById('result','numberB')">To B</button>
+                </div>
               </div>
             </div>
             <hr>
